fix: nav alignment, Ireland pin, and measurement guide label positions

--- a/css/style.css
+++ b/css/style.css
@@ -90,13 +90,14 @@ a {
   white-space: nowrap;
   overflow: hidden;
   justify-content: space-between;
+  align-items: flex-start;
 }
 
 .nav h1 {
   font-size: 3rem;
   letter-spacing: 1rem;
   margin-left: 20%;
-  margin-top: 21%;
+  margin-top: 12%;
 
   font-style: bold;
   color: #000000;
@@ -118,7 +119,7 @@ a {
 }
 .nav li {
   padding-left: 5rem;
-  margin-top: 6%;
+  margin-top: 0;
 }
 /* bespoke boutique page navigation bar-dropdown*/
 .navigation {
@@ -130,7 +131,7 @@ a {
   font-size: 3rem;
   letter-spacing: 1rem;
   margin-left: 20%;
-  margin-top: 21%;
+  margin-top: 12%;
 
   text-wrap: nowrap;
 
@@ -184,14 +185,20 @@ ul li:hover ul.dropdown {
 }
 
 .bb {
-  scale: 0.3;
   opacity: 1;
   transition: 0.5s;
-  margin-left: 35%;
+  align-self: flex-end;
+  margin-right: 3%;
+  margin-bottom: 1rem;
+}
+.bb img {
+  width: 26rem;
+  height: auto;
+  display: block;
 }
 .bb:hover {
   opacity: 0.6;
-  scale: 0.4;
+  scale: 1.1;
 }
 
 /* links */
@@ -617,6 +624,7 @@ a {
 }
 .block__header {
   text-align: center;
+  margin-top: 12rem;
   margin-bottom: 5rem;
 }
 .block__heading {
@@ -936,6 +944,10 @@ a {
 }
 
 /*founder message page*/
+
+.founder_message {
+  margin-top: 4rem;
+}
 
 /*founder_message1*/
 .founder_message1 h3 {
